Add a better CI pipeline with security scans. (#110)
* Fix main branch sanity check

* Add security tools: bundler-audit and brakeman. Ignore existing issues

* Add workflows for security and change name to CI for workflow

* Remove circleci in favor of using GitHub

* Add the scanner task to CI

* Remove an extra ruby end

* Fix the name

* Add rails later, check github actions now

--- a/app/views/resources/latest_news.html.erb
+++ b/app/views/resources/latest_news.html.erb
@@ -8,7 +8,6 @@
       </div>
 <% end %>
 </div>
-<% end %><!-- filter_by row -->
 </div>
 
 <div class="row result-title">
@@ -53,5 +52,5 @@
 </div><!-- result row -->
 
 </div><!-- container-fluid -->
-
+<h1>LALALALA</h1>
 </div>  
