--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -1,10 +1,17 @@
 <div class='width search-curriculum-page'>
   <!-- %br -->
-  <div class='entry-content'>
-    <h2 class='normal'>Search Curriculum</h2>
-    <p>
-      Search by emotional theme, materials needed, ease of set-up and clean-up and more. We always encourage the creativity and innovation of each Windows Facilitator; if you adapt and improve workshops, please be sure to share your ideas with us!
-    </p>
+  <div class='entry-content d-flex justify-content-between align-items-center'>
+    <div>
+      <h2 class='normal'>Search Curriculum</h2>
+      <p>
+        Search by emotional theme, materials needed, ease of set-up and clean-up and more. We always encourage the creativity and innovation of each Windows Facilitator; if you adapt and improve workshops, please be sure to share your ideas with us!
+      </p>
+    </div>
+    <% if user_signed_in? %>
+      <div class="ml-auto">
+        <%= link_to 'New Workshop', new_workshop_path, class: 'btn btn-primary' %>
+      </div>
+    <% end %>
   </div>
   <div class="inner-container">
     <div class='small-gray-title'>
