Update resources crud (#175)
* Bootstrap categories_fields for use on resources index

* Change the show all button to remove url params so as to replace any of the category filters

* Change the 'kind' buttons to delete the show_all param and set the kind param (rather than append it)

* Show 25 items per page on Resources index

* Add resources edit and form (extracted from new) views and add relevant controller actions

* Change layout of Resources on index (reduce image size, increase results section)

* Change styling and permissions on 'new' button resources index

* Remove header row from resources index 'search results' area

* Add edit button to resource show if current_user.super_user

--- a/app/assets/stylesheets/simple_form_overrides.css
+++ b/app/assets/stylesheets/simple_form_overrides.css
@@ -1,10 +1,28 @@
-form.simple_form .form-check-input + .form-check-label {
+form.simple_form .form-check-input + .form-check-label, .categories-fields .form-check-input + .form-check-label {
     height: auto !important;
     width: auto !important;
 }
 
-form.simple_form select.form-select {
+form.simple_form select.form-select, .categories-fields select.form-select {
     height: auto;
     border-radius: 0px;
     border: 1px solid #ccc;
+}
+
+.categories-fields .form-check {
+    display: flex !important;
+    flex: 0 0 100% !important;
+    grid-column: 1 / -1 !important;
+    width: 100% !important;
+    margin-bottom: 0.5rem !important;
+}
+
+.categories-fields .form-check .form-check-label {
+    font-weight: normal;
+    margin-left: 0.5em;
+    margin-bottom: 0;
+}
+
+.categories-fields .form-check .form-check-input {
+    margin-top: 0rem;
 }
