--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -1,60 +1,3 @@
 <h2 class="normal"><%= "New Resource" %></h2>
 
-<%= simple_form_for @resource, as: :resource, url: resources_path do |f| %>
-  <%= render 'shared/errors', resource: @resource if @resource.errors.any? %>
-
-  <div class="row mb-3">
-    <div class="col-md-8">
-      <%= f.input :title,
-                  placeholder: "enter a title",
-                  wrapper: false,
-                  input_html: { class: "form-control w-100" } %>
-    </div>
-  </div>
-  <div class="row mb-3">
-    <div class="col-md-1">
-      <%= f.input :kind, as: :select, collection: ["Toolkit","Form","Template","Handout", "Story"] %>
-    </div>
-    <div class="col-md-4">
-      <%= f.input :sectors, as: :select, collection: @sectors %>
-    </div>
-    <div class="col-md-4">
-      <%= f.input :url, as: :text, input_html: { rows: 1, class: "form-control w-100" } %>
-    </div>
-    <div class="col-md-3">
-      <%= f.input :ordering,
-                  as: :integer,
-                  label: "Dashboard display order",
-                  input_html: { class: "form-control form-control-sm", min: 1, step: 1 },
-                  wrapper_html: { class: "form-group-sm" } %>
-    </div>
-  </div>
-  <div class="row mb-3">
-    <div class="col-md-4">
-      <%= f.input :text, as: :text, input_html: { rows: 5 } %>
-    </div>
-    <div class="col-md-8">
-      <%= f.input :attachment, as: :file %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4">
-      <%= f.input :featured, as: :boolean,
-                  label: "Feature on the dashboard?" %>
-    </div>
-    <div class="col-md-8">
-      <%= f.input :inactive, as: :boolean,
-                  input_html: { class: "form-check-input" },
-                  wrapper_html: { class: "form-check d-block text-start" } %>
-    </div>
-  </div>
-
-
-
-
-  <div class="form-group">
-    <br>
-    <%= link_to 'Cancel', root_path, class: 'btn cancel-btn' %>
-    <%= f.submit 'Submit' %>
-  </div>
-<% end %> 
+<%= render "form" %>
