--- a/app/frontend/stylesheets/application.tailwind.css
+++ b/app/frontend/stylesheets/application.tailwind.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "./pagination.css";
 
 @source "../../../app/views/**/*.html.erb";
 @source "../../../app/views/**/*.rb";
