--- a/app/views/workshops/_index_row.html.erb
+++ b/app/views/workshops/_index_row.html.erb
@@ -7,45 +7,61 @@
   (workshop_series_membership.series_description_spanish || workshop_series_membership.series_description) %>
   <% description = workshop_series_membership.series_description_spanish || workshop_series_membership.series_description %>
 <% else %>
-  <% description = workshop.formatted_objective(length: 215) %>
+  <% description = workshop.formatted_objective(length: 600) %>
 <% end %>
 
-<div class='list-group-item list-group-item-custom'>
-  <div class='row'>
-    <div class="<%= workshop_series_membership ? "col-md-12" : "col-md-9" %>">
-      <div class='col-md-3'>
-        <div class='portrait-img content-img-popular popular-img'
-             style="background-image: url(<%= workshop.thumbnail_image %>);
-               max-height: 100px;" ></div>
-      </div>
-      <div class="col-md-9 content-heading span">
-        <h3><%= "[UNPUBLISHED] " if workshop.inactive? %><%= link_to workshop.title, link_route %></h3>
-        <small>
-          <%= "#{workshop.windows_type.label unless workshop.windows_type.nil?} - #{workshop.date}" %>
-          &nbsp;<%= "(#{ workshop.age_range.strip })" if workshop.age_range.present? %>
-        </small>
-        <br/>
-        <small>Author: <%= workshop.user ? link_to(workshop.author, user_path(workshop.user)) : workshop.author %></small>
-        <br>
-        <small>Favorited: <%= workshop.led_count %> times</small>
-      </div>
-      <div class="col-md-12">
-        <p class='workshop-description'>
-        <span title="<%= workshop.formatted_objective(length: 600) %>">
-          <%= truncate(description, :length => 215, :omission => '... ', :separator => ' ') %>
-        </span>
-        </p>
-      </div>
+<div class="flex flex-col md:flex-row border-b border-gray-200 py-4 list-group-item-custom gap-4">
+  <!-- 1️⃣ Image -->
+  <div class="flex-shrink-0 w-32 h-24 bg-gray-100 rounded overflow-hidden">
+    <%= link_to workshop_path(workshop) do %>
+      <img class="object-cover w-full h-full" src="<%= workshop.images.last&.file&.url || asset_path('workshop_default.png') %>">
+    <% end %>
+  </div>
+
+  <!-- 2️⃣ Title / author / metadata -->
+  <div class="flex flex-col gap-1 min-w-[40ch] max-w-[40ch] break-words">
+    <h3 class="text-lg font-bold text-gray-800">
+      <%= link_to "#{ "[UNPUBLISHED] " if workshop.inactive? }#{ workshop.title }", link_route, class: "hover:underline" %>
+    </h3>
+
+    <div class="text-sm text-gray-600">
+      Author:
+      <% if workshop.user.present? %>
+        <%= link_to workshop.author_name, user_path(workshop.user), class: "hover:underline" %>
+      <% else %>
+        <%= workshop.full_name.present? ? workshop.full_name : "Facilitator" %>
+      <% end %>
     </div>
 
-    <% unless workshop_series_membership %>
-      <div class="col-md-3">
-        <small>
-          <span title="<%= workshop.categories.map(&:name).to_sentence %>">
-            <%= workshop.categories.map(&:name).to_sentence.truncate(150) %>
-          </span>
-        </small>
-      </div>
+    <div class="text-sm text-gray-600">
+    <span>
+      Type/date: <%= "#{workshop.windows_type.label} - #{workshop.date}" if workshop.windows_type.present? %>
+      <% if workshop.workshop_age_ranges.any? %>
+        (<%= workshop.workshop_age_ranges.to_sentence %>)
+      <% end %>
+    </span>
+    </div>
+
+    <div class="text-sm text-gray-600">
+      Led: <%= workshop.led_count %> <%= "time".pluralize(workshop.led_count) %>
+    </div>
+  </div>
+
+  <!-- 3️⃣ Description -->
+  <div class="flex-1 text-sm text-gray-700">
+    <p class="workshop-description">
+      <span title="<%= description %>">
+        <%= sanitize(truncate(CGI.unescapeHTML(description), length: 215, omission: '... ', separator: ' ')) %>
+      </span>
+    </p>
+    <!-- 4️⃣ Tags (optional) -->
+    <% if workshop.categories.any? %>
+      <p class="tags mt-3 italic">
+        Tags:
+        <span title="<%= workshop.categories.map(&:name).to_sentence %>">
+          <%= workshop.categories.map(&:name).to_sentence.truncate(150) %>
+        </span>
+      </p>
     <% end %>
   </div>
 </div>
