--- a/app/views/workshops/_sectors_fields.html.erb
+++ b/app/views/workshops/_sectors_fields.html.erb
@@ -1,20 +1,26 @@
-<div class="categories-fields-wrapper">
-  <div class="categories-header">
-    <label>Service Population</label>
-    <%= image_tag("collapse-arrow.png", class: "arrow-down") %>
+<div class="categories-fields-wrapper border border-gray-300 rounded-lg overflow-hidden w-full max-w-md">
+  <!-- Header -->
+  <div class="categories-header flex justify-between items-center bg-white px-4 py-2 w-full cursor-pointer"
+       data-action="click->dropdown#toggle">
+    <label class="mb-0 font-medium text-gray-700">Service Population</label>
+    <%= image_tag(
+          "collapse-arrow.png",
+          class: "arrow-down w-4 h-4 transition-transform duration-300",
+          "data-dropdown-target" => "icon"
+        ) %>
   </div>
-  <div class="categories-fields">
+
+  <!-- Collapsible content -->
+  <div class="categories-fields mt-2 hidden" data-dropdown-target="content">
     <% sectors.each do |sector| %>
-      <% if sector.name != 'Other' %>
-        <div class="input-group">
-          <%= check_box_tag "sectors[#{sector.id}]", sector.id,
-                            (params[:sectors] && params[:sectors]["#{sector.id}"] == sector.id.to_s),
-                            class: "category-checkbox" %>
-          <span class="small"><%= sector.name %></span>
-        </div>
-      <% end %>
+      <% next if sector.name == 'Other' %>
+      <div class="input-group flex items-center gap-2 mb-1 px-4">
+        <%= check_box_tag "sectors[#{sector.id}]",
+                          sector.id,
+                          (params[:sectors] && params[:sectors]["#{sector.id}"] == sector.id.to_s),
+                          class: "category-checkbox" %>
+        <span class="text-sm text-gray-700"><%= sector.name %></span>
+      </div>
     <% end %>
   </div>
 </div>
-
-<!-- <input id="search_Domestic Violence" value="1" name="search[Domestic Violence]" type="checkbox"> -->
