--- a/app/views/workshops/_filters_applied.html.erb
+++ b/app/views/workshops/_filters_applied.html.erb
@@ -19,10 +19,15 @@
 
 <div style="display: flex; justify-content: space-between; align-items: center;">
   <div class="filters-applied" style="display: flex; gap: 0.5rem; align-items: center;">
-    <%= label_tag nil, "Filters applied:" %>
-    <span><%= filters_applied.any? ? filters_applied.to_sentence : "None" %></span>
-  </div>
-  <div class="clear-all">
-    <%= link_to 'Clear filters', workshops_path %>
+    <h3 class="text-sm font-semibold uppercase text-gray-500 tracking-wide">Filters applied</h3>
+    <% if filters_applied.any? %>
+      <%= filters_applied.to_sentence %>
+      <%= link_to 'Clear filters', workshops_path,
+                  class: "inline-block px-4 py-2 bg-[#faf9f9] text-[#a6a7a8] rounded
+                  hover:bg-[#E8E8E8] hover:text-[#374151] transition-colors duration-200" %>
+    <% else %>
+      None
+    <% end %>
+
   </div>
 </div>
