--- a/app/views/workshops/_index_row.html.erb
+++ b/app/views/workshops/_index_row.html.erb
@@ -10,7 +10,8 @@
   <% description = workshop.formatted_objective(length: 600) %>
 <% end %>
 
-<div class="flex flex-col md:flex-row border-b border-gray-200 py-4 list-group-item-custom gap-4">
+<div id="workshop-<%= workshop.id %>" class="flex flex-col md:flex-row border-b border-gray-200 py-4 list-group-item-custom gap-4">
+  <div id="workshop-<%= workshop.id %>-anchor" style="position: relative; top: -200px;"></div>
   <!-- 1️⃣ Image -->
   <div class="flex-shrink-0 w-32 h-24 bg-gray-100 rounded overflow-hidden">
     <%= link_to workshop_path(workshop) do %>
@@ -20,7 +21,25 @@
 
   <!-- 2️⃣ Title / author / metadata -->
   <div class="flex flex-col gap-1 min-w-[40ch] max-w-[40ch] break-words">
-    <h3 class="text-lg font-bold text-gray-800">
+    <h3 class="text-lg font-bold text-gray-800 flex items-center gap-2">
+      <% if current_user.has_bookmarked_workshop?(workshop) %>
+        <%= link_to image_tag("bookmark-active.png", class: "w-5 h-5"),
+                    bookmark_path(current_user.bookmark_for(workshop),
+                                  from: "workshops_index",
+                                  **request.query_parameters,
+                                  anchor: "workshop-#{workshop.id}-anchor"),
+                    method: :delete,
+                    class: "inline-block",
+                    data: { turbo_confirm: "Remove bookmark?" } %>
+      <% else %>
+        <%= link_to image_tag("bookmark.png", class: "w-5 h-5"),
+                    bookmarks_path(bookmark: { bookmarkable_id: workshop.id, bookmarkable_type: "Workshop" },
+                                   from: "workshops_index",
+                                   **request.query_parameters,
+                                   anchor: "workshop-#{workshop.id}-anchor"),
+                    method: :post,
+                    class: "inline-block" %>
+      <% end %>
       <%= link_to "#{ "[UNPUBLISHED] " if workshop.inactive? }#{ workshop.title }", link_route, class: "hover:underline" %>
     </h3>
 
