--- a/app/views/faqs/edit.html.erb
+++ b/app/views/faqs/edit.html.erb
@@ -1,6 +1,25 @@
-<div class="row">
-  <div class="col-md-12">
-    <h2>Edit <%= @faq.class.model_name.human %></h2>
-    <%= render "form", locals: { faq: @faq } %>
+<div class="min-h-screen py-8">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div
+      class="
+        max-w-5xl mx-auto bg-white border border-gray-200 rounded-xl shadow-lg
+        hover:shadow-xl transition-shadow duration-200 p-6
+      "
+    >
+      <div class="flex items-center justify-between mb-6">
+        <h1 class="text-2xl font-semibold text-gray-900">Edit
+          <%= @faq.class.model_name.human %></h1>
+        <%= link_to_button "View",
+        faq_path(@faq),
+        variant: :secondary_outline,
+        class: "h-10 px-4 py-2 text-sm font-medium" %>
+      </div>
+
+      <div class="space-y-6">
+        <div class="mt-4">
+          <%= render "form", faq: @faq %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
