Change root_path references to authenticated_root_path (#269)

--- a/app/views/workshop_log_creation_wizard/_form.html.erb
+++ b/app/views/workshop_log_creation_wizard/_form.html.erb
@@ -21,7 +21,7 @@
   <br>
   <%= render 'comments_fields', f: f, report: @report %>
   <div class="btn-container">
-    <%= link_to 'Cancel', root_path, class: 'btn btn-submit cancel-btn' %>
+    <%= link_to 'Cancel', authenticated_root_path, class: 'btn btn-submit cancel-btn' %>
     <%= f.submit 'Submit' %>
   </div>
 <% end %> 
