--- a/app/views/workshops/_form.html.erb
+++ b/app/views/workshops/_form.html.erb
@@ -242,7 +242,7 @@
     <!-- Actions -->
     <div class="flex gap-x-3 mt-6">
       <%= link_to_button "Delete", @workshop, variant: :danger_outline, method: :delete, data: { confirm: "Are you sure?" } %>
-      <%= link_to_button "Cancel", (action_name == "share_idea" ? root_path : workshops_path), variant: :secondary_outline %>
+      <%= link_to_button "Cancel", (action_name == "share_idea" ? authenticated_root_path : workshops_path), variant: :secondary_outline %>
       <%= f.submit "Submit", class: "px-4 py-2 rounded-lg bg-blue-600 text-white hover:bg-blue-700 text-sm font-medium" %>
     </div>
   <% end %>
