Resources card display (#271)
* Display resources as cards on index

* CRUD resources as cards (incl dashboard)

* Use the text 'not published' instead of 'unpublished'

--- a/app/views/faqs/_faq.html.erb
+++ b/app/views/faqs/_faq.html.erb
@@ -27,7 +27,7 @@
                 <i class="fa-solid fa-toggle-on text-primary text-2xl"></i>
               <% end %>
             <% end %>
-            <span class="pl-1"><%= faq.inactive? ? "[UNPUBLISHED]" : "[PUBLISHED]" %>
+            <span class="pl-1"><%= faq.inactive? ? "[NOT PUBLISHED]" : "[PUBLISHED]" %>
             </span>
           <% end %>
 
