--- a/app/views/workshops/_inactive_fields.html.erb
+++ b/app/views/workshops/_inactive_fields.html.erb
@@ -23,7 +23,7 @@
                         (params[:inactive].present? && YAML.load(params[:inactive].to_s) == true),
                         id: "inactive_true", class: "category-checkbox" %>
       <span class="text-sm text-gray-700">
-        Inactive/unpublished
+        Inactive/not published
       </span>
     </div>
   </div>
