--- a/app/views/workshops/_filters_applied.html.erb
+++ b/app/views/workshops/_filters_applied.html.erb
@@ -5,7 +5,7 @@
 <% sections_applied = params[:sectors].present? ? Sector.where(id: params[:sectors].to_unsafe_h.values.reject(&:blank?)).
   pluck(:name) : [] %>
 <% active_applied = "Published" if params[:active] == "true" %>
-<% inactive_applied = "Unpublished" if params[:inactive] == "true" %>
+<% inactive_applied = "Not published" if params[:inactive] == "true" %>
 <% filters_applied = [
   *windows_types_applied,
   *categories_applied,
