--- a/app/views/workshops/_index_row.html.erb
+++ b/app/views/workshops/_index_row.html.erb
@@ -23,6 +23,8 @@
   <!-- 2️⃣ Title / author / metadata -->
   <div class="flex flex-col gap-1 min-w-[40ch] max-w-[40ch] break-words">
     <h3 class="text-lg font-bold text-gray-800 flex items-center gap-2">
+      <%= turbo_frame_tag dom_id(workshop, :bookmark) do %>
+        <%= turbo_flash  %> 
       <% if workshop.bookmarks.any? { |b| b.user_id == current_user.id } %>
         <%= link_to bookmark_path(
                       current_user.bookmark_for(workshop),
@@ -30,9 +32,8 @@
                       **request.query_parameters,
                       anchor: "workshop-#{workshop.id}-anchor"
                     ),
-                    method: :delete,
                     class: "inline-block",
-                    data: { turbo_confirm: "Remove bookmark?" } do %>
+                    data: { turbo_method: :delete, turbo_confirm: "Remove bookmark?" } do %>
           <i class="fas fa-bookmark w-5 h-5 text-blue-500 hover:text-gray-400"></i>
         <% end %>
       <% else %>
@@ -42,10 +43,11 @@
                       **request.query_parameters,
                       anchor: "workshop-#{workshop.id}-anchor"
                     ),
-                    method: :post,
-                    class: "inline-block" do %>
+                    class: "inline-block",
+                    data: {turbo_method: :post} do %>
           <i class="far fa-bookmark w-5 h-5 text-gray-400 hover:text-blue-500"></i>
         <% end %>
+      <% end %>
       <% end %>
       <%= link_to "#{ "[NOT PUBLISHED] " if workshop.inactive? }#{ workshop.title }",
                   link_route, class: "hover:underline" %>
